# exponential-backoff

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: into_iter.rs  iter.rs  iterator.rs  lib.rs
tests/: test.rs
