[package]
name = "exponential-backoff"
version = "1.0.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/exponential-backoff"
documentation = "https://docs.rs/exponential-backoff"
description = "A small and flexible backoff function"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
rand = "0.7.3"

[dev-dependencies]
